--- a/microarray-analysis.html
+++ b/microarray-analysis.html
@@ -299,7 +299,10 @@ names(fdata)[names(fdata)==&quot;ENTREZID&quot;] &lt;- &quot;EntrezGene.ID&quot;
 fdata$probe &lt;- rownames(fdata)
 
 # make prediction
-pred.pam50 &lt;- intrinsic.cluster.predict(sbt.model=pam50.robust, data=expdata, annot=fdata, do.mapping = TRUE, do.prediction.strength = FALSE, verbose = FALSE)
+pred.pam50 &lt;- intrinsic.cluster.predict(
+  sbt.model = pam50.robust, data=expdata, annot=fdata, 
+  do.mapping = TRUE, do.prediction.strength = FALSE, 
+  verbose = FALSE)
 
 table(pred.pam50$subtype)
 
@@ -316,7 +319,10 @@ design.mat &lt;- model.matrix(~0 + type)
 colnames(design.mat) &lt;- gsub(&quot;type&quot;, &quot;&quot;, colnames(design.mat))
 
 # Set up contrast matrix
-contrast.mat &lt;- makeContrasts(Basal_LumA = Basal - LumA, Basal_LumB = Basal - LumB, levels=design)
+contrast.mat &lt;- makeContrasts(
+  Basal_LumA = Basal - LumA, 
+  Basal_LumB = Basal - LumB, 
+  levels=design)
 
 # fit limma model to expression data
 library(limma)
